--- a/PermissionScope-example/Info.plist
+++ b/PermissionScope-example/Info.plist
@@ -22,10 +22,16 @@
 	<string>1</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>NSBluetoothPeripheralUsageDescription</key>
+	<string>Explanation why you need bluetooth in the background</string>
 	<key>NSLocationAlwaysUsageDescription</key>
 	<string>always</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
 	<string>when in use</string>
+	<key>UIBackgroundModes</key>
+	<array>
+		<string>bluetooth-peripheral</string>
+	</array>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
